--- a/yuk/forms.scss
+++ b/yuk/forms.scss
@@ -1,4 +1,4 @@
-@import "/home/matt/blueprint/blueprint/src/partials/_colors.scss";
+@import "partials/_colors.scss";
 /* forms.css */
 label {font-weight:bold;}
 fieldset {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
