--- a/yuk/reset.scss
+++ b/yuk/reset.scss
@@ -1,4 +1,4 @@
-@import "/home/matt/blueprint/blueprint/src/partials/_colors.scss";
+@import "partials/_colors.scss";
 
 /* --------------------------------------------------------------
 
@@ -12,6 +12,7 @@ html {
 	padding:0; 
 	border:0; 
 }
+
 
 body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -67,3 +68,4 @@ a img { border: none; }
 
 /* Remember to define your own focus styles! */
 :focus { outline: 0; }
+
